[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firip-api"
version = "0.1.0"
description = "FIRIP - Florida flood/water risk intelligence API (FastAPI backend)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "UNLICENSED" }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a real Postgres+PostGIS instance (docker compose -f infra/docker-compose.yml up -d db)",
]
