[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firip-workers"
version = "0.1.0"
description = "FIRIP - ingestion scheduler and agents (Python worker runtime)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "UNLICENSED" }

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
